--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -35,3 +35,6 @@
   template:
     src: todo.conf
     dest: /etc/nginx/sites-enabled/todo.conf
+
+- name: Restart the Nginx
+    include_tasks: handlers
