--- a/roles/todo/tasks/main.yml
+++ b/roles/todo/tasks/main.yml
@@ -2,3 +2,9 @@
   include_role:
     name: common
     tasks_from: nodejs
+
+- name: Restart Todo
+  systemd:
+    name: todo
+    state: restarted
+    enabled: yes
